# newgh

./: README.md  pyproject.toml
.github/workflows/: claude.yml  publish.yml
src/: newp.py
tests/: test_dummy.py
