[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "newp"  # Make sure this name isn't taken on pypi.org!
version = "0.1.0"
authors = [{name = "lost_0", email = "l05t_0@proton.me"}]
readme = "README.md"
requires-python = ">=3.7"
license-files = ["LICENSE.txt"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: File Formats",
]

[project.scripts]
newp = "newp:main"